bpk-lib/crates/macbat/macros/tests/trybuild_negative/variant_inventory_data_carrying_variant.stderr
error: every variant must be a unit variant
 --> tests/trybuild_negative/variant_inventory_data_carrying_variant.rs:5:5
  |
5 |     B(u8),
  |     ^
