bpk-lib/crates/macbat/macros/tests/trybuild_negative/variant_inventory_data_carrying_variant.rs
use macbat::VariantInventory;
#[derive(VariantInventory)]
enum E {
    A,
    B(u8),
}
fn main() {}
